crates/telemetry-adapters/tests/snapshots/snapshots_iracing__iracing_oval_high_speed_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_iracing.rs
assertion_line: 131
expression: normalized
---
speed_ms: 89.4
steering_angle: -0.02
throttle: 0.78
brake: 0
clutch: 0
rpm: 8400
max_rpm: 0
gear: 4
num_gears: 0
lateral_g: 0.25492904
longitudinal_g: 0.030591486
vertical_g: 1.0003417
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 95
  - 98
  - 90
  - 93
tire_pressures_psi:
  - 25.961802
  - 25.961802
  - 24.946535
  - 24.946535
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
car_id: dallaradw12
track_id: indianapolisoval
position: 5
lap: 12
current_lap_time_s: 18.6
best_lap_time_s: 39.8
last_lap_time_s: 40.1
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.45
engine_temp_c: 88
extended:
  ffb_scalar_source:
    type: String
    value: unknown
  fuel_level:
    type: Float
    value: 22.5
  session_flags_raw:
    type: Integer
    value: 4
  session_time:
    type: Float
    value: 245.3
sequence: 0
