crates/telemetry-adapters/tests/snapshots/snapshots_iracing__iracing_pit_lane_entry_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_iracing.rs
expression: normalized
---
speed_ms: 16.7
steering_angle: 0
throttle: 0.15
brake: 0
clutch: 0
rpm: 3500
max_rpm: 0
gear: 2
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: true
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: false
  pit_limiter: false
  in_pits: true
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
car_id: corvettez06gt3r
track_id: daytonainternational
position: 0
lap: 8
current_lap_time_s: 0
best_lap_time_s: 100.5
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.18
engine_temp_c: 0
extended:
  ffb_scalar_source:
    type: String
    value: unknown
  fuel_level:
    type: Float
    value: 10
  session_flags_raw:
    type: Integer
    value: 8
  session_time:
    type: Float
    value: 312
sequence: 0
