crates/telemetry-adapters/tests/snapshots/snapshots_iracing__iracing_road_course_braking_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_iracing.rs
assertion_line: 188
expression: normalized
---
speed_ms: 38
steering_angle: 0.22
throttle: 0
brake: 0.92
clutch: 0
rpm: 5800
max_rpm: 0
gear: 2
num_gears: 0
lateral_g: 0.86675876
longitudinal_g: -1.2236594
vertical_g: 1.0003417
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 102
  - 105
  - 96
  - 99
tire_pressures_psi:
  - 26.977066
  - 26.977066
  - 25.961802
  - 25.961802
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
car_id: mercedesamggt3
track_id: spa
position: 8
lap: 5
current_lap_time_s: 52.3
best_lap_time_s: 98.2
last_lap_time_s: 99.1
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.58
engine_temp_c: 92
extended:
  ffb_scalar_source:
    type: String
    value: unknown
  fuel_level:
    type: Float
    value: 35
  session_flags_raw:
    type: Integer
    value: 4
  session_time:
    type: Float
    value: 180.7
sequence: 0
